# mc_btplayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  partitions.csv  sdkconfig
fritzing/: esp32_UDA1334A.fzz  part.DevKitC_290c86ec713a093d478d300ac8360d73_62.fzp
main/: CMakeLists.txt  Kconfig
main/inc/: app_btplayer.h  app_console.h
main/src/: .btplayer.c.swp  app_btplayer.c  app_console.c  btplayer.c
resources/sounds/aac/: 0.aac  1.aac  2.aac  3.aac  4.aac  5.aac  6.aac  7.aac  8.aac  9.aac  conn_pass_is.aac  connected.aac  disconnected.aac  pairing.aac
